feat(chat): 채팅방 생성 응답 및 그룹 참여자 처리 개선
src/main
- 그룹 채팅방 생성 시 GROUP_CREW 타입이면 postId 기준 CrewParticipant들을 채팅방 참여자로 함께 추가
- GROUP_CREW 생성 시 participants.member fetch join 전용 조회를 사용해 N+1 없이 참여자 목록을 반영
- 채팅방 생성 응답이 chatRoomId만 반환되지 않도록 요약 조회 경로를 추가
- ChatRoomController에서 생성 직후 실제 채팅방 요약 응답을 반환하도록 수정
- ChatRoomRepository에 생성 응답 전용 summary 조회를 추가해 type, title 정보를 한 번에 조회하도록 정리