@@ -1,6 +1,12 @@
 package com.fullcount.service;
 
-import com.fullcount.domain.*;
+import com.fullcount.domain.ChatMessage;
+import com.fullcount.domain.ChatRoom;
+import com.fullcount.domain.ChatRoomParticipant;
+import com.fullcount.domain.ChatRoomType;
+import com.fullcount.domain.CrewParticipant;
+import com.fullcount.domain.Member;
+import com.fullcount.domain.Post;
 import com.fullcount.dto.ChatDTO;
 import com.fullcount.dto.common.CursorResponse;
 import com.fullcount.dto.common.PagedResponse;
@@ -8,7 +14,10 @@ import com.fullcount.exception.BusinessException;
 import com.fullcount.exception.ErrorCode;
 import com.fullcount.mapper.ChatMapper;
 import com.fullcount.mapper.ChatRoomMapper;
-import com.fullcount.repository.*;
+import com.fullcount.repository.ChatMessageRepository;
+import com.fullcount.repository.ChatRoomRepository;
+import com.fullcount.repository.MemberRepository;
+import com.fullcount.repository.PostRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
@@ -18,7 +27,11 @@ import org.springframework.data.domain.Slice;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -30,30 +43,25 @@ public class ChatRoomService {
     private final ChatRoomRepository chatRoomRepository;
     private final ChatMessageRepository chatMessageRepository;
     private final PostRepository postRepository;
-    private final TransferRepository transferRepository;
     private final MemberRepository memberRepository;
 
-    // 내 채팅방 목록 조회 (Pageable 적용 -> PagedResponse 반환)
     public PagedResponse<ChatDTO.ChatRoomResponse> getMyChatRooms(Long memberId, Pageable pageable) {
         log.info("채팅방 목록 조회 시작 - memberId={}, page={}, size={}", memberId, pageable.getPageNumber(), pageable.getPageSize());
 
         Page<ChatRoom> chatRooms = chatRoomRepository.findAllByMemberId(memberId, pageable);
 
-        // 채팅방 ID 목록으로 최신 메시지를 한 번에 조회 (N+1 방지)
         List<Long> roomIds = chatRooms.map(ChatRoom::getId).toList();
-        Map<Long, ChatMessage> lastMessageMap = chatMessageRepository
-                .findLastMessagesByRoomIds(roomIds)
+        Map<Long, ChatMessage> lastMessageMap = chatMessageRepository.findLastMessagesByRoomIds(roomIds)
                 .stream()
-                .collect(Collectors.toMap(m -> m.getChatRoom().getId(), m -> m));
+                .collect(Collectors.toMap(message -> message.getChatRoom().getId(), message -> message));
 
         Page<ChatDTO.ChatRoomResponse> responsePage = chatRooms.map(room ->
                 ChatMapper.toChatRoomResponse(room, lastMessageMap.get(room.getId())));
 
-        log.info("채팅방 목록 조회 완료 - memberId={}, 총 채팅방 수={}", memberId, chatRooms.getTotalElements());
+        log.info("채팅방 목록 조회 완료 - memberId={}, total={}", memberId, chatRooms.getTotalElements());
         return PagedResponse.of(responsePage);
     }
 
-    // 채팅방 상세 조회
     public ChatDTO.ChatRoomDetailResponse getChatRoomDetail(Long memberId, Long roomId) {
         log.info("채팅방 상세 조회 시작 - memberId={}, roomId={}", memberId, roomId);
 
@@ -61,10 +69,7 @@ public class ChatRoomService {
                 .orElseThrow(() -> new BusinessException(ErrorCode.CHAT_ROOM_NOT_FOUND));
 
         List<Member> participants = getParticipants(chatRoom);
-
-        // 권한 체크
-        boolean isParticipant = participants.stream()
-                .anyMatch(m -> m.getId().equals(memberId));
+        boolean isParticipant = participants.stream().anyMatch(member -> member.getId().equals(memberId));
         if (!isParticipant) {
             log.warn("채팅방 상세 조회 접근 거부 - memberId={}, roomId={}", memberId, roomId);
             throw new BusinessException(ErrorCode.ACCESS_DENIED);
@@ -74,37 +79,29 @@ public class ChatRoomService {
         return ChatMapper.toChatRoomDetailResponse(chatRoom, participants);
     }
 
-    // 채팅 메시지 내역 조회 (커서 기반 무한 스크롤 - CursorResponse 반환)
     public CursorResponse<ChatDTO.ChatMessagePayload> getChatMessages(Long memberId, Long roomId, Long lastMessageId, int size) {
-        log.info("채팅 메시지 내역 조회 시작 - memberId={}, roomId={}, lastMessageId={}, size={}", memberId, roomId, lastMessageId, size);
+        log.info("채팅 메시지 조회 시작 - memberId={}, roomId={}, lastMessageId={}, size={}", memberId, roomId, lastMessageId, size);
 
-        // 채팅방 존재 여부 확인
         if (!chatRoomRepository.existsById(roomId)) {
-            log.warn("채팅 메시지 내역 조회 실패 - 채팅방 없음, roomId={}", roomId);
+            log.warn("채팅 메시지 조회 실패 - 채팅방 없음, roomId={}", roomId);
             throw new BusinessException(ErrorCode.CHAT_ROOM_NOT_FOUND);
         }
 
-        // 참여자 권한 체크 (경량 쿼리)
         if (!chatRoomRepository.isParticipant(roomId, memberId)) {
-            log.warn("채팅 메시지 내역 조회 접근 거부 - memberId={}, roomId={}", memberId, roomId);
+            log.warn("채팅 메시지 조회 접근 거부 - memberId={}, roomId={}", memberId, roomId);
             throw new BusinessException(ErrorCode.ACCESS_DENIED);
         }
 
-        // 커서 페이징은 항상 0번 페이지를 조회
         PageRequest pageRequest = PageRequest.of(0, size);
-        Slice<ChatMessage> messageSlice = chatMessageRepository
-                .findByRoomIdWithCursor(roomId, lastMessageId, pageRequest);
+        Slice<ChatMessage> messageSlice = chatMessageRepository.findByRoomIdWithCursor(roomId, lastMessageId, pageRequest);
 
         List<ChatDTO.ChatMessagePayload> content = messageSlice.getContent().stream()
                 .map(ChatMapper::toPayload)
-                .collect(Collectors.toList());
+                .toList();
 
-        Long nextCursor = null;
-        if (!content.isEmpty()) {
-            nextCursor = content.get(content.size() - 1).getMessageId();
-        }
+        Long nextCursor = content.isEmpty() ? null : content.get(content.size() - 1).getMessageId();
 
-        log.info("채팅 메시지 내역 조회 완료 - memberId={}, roomId={}, 조회 메시지 수={}, hasNext={}, nextCursor={}",
+        log.info("채팅 메시지 조회 완료 - memberId={}, roomId={}, count={}, hasNext={}, nextCursor={}",
                 memberId, roomId, content.size(), messageSlice.hasNext(), nextCursor);
 
         return CursorResponse.<ChatDTO.ChatMessagePayload>builder()
@@ -114,41 +111,42 @@ public class ChatRoomService {
                 .build();
     }
 
+    public ChatDTO.ChatRoomResponse getChatRoomResponse(Long roomId) {
+        ChatRoom chatRoom = chatRoomRepository.findByIdWithSummary(roomId)
+                .orElseThrow(() -> new BusinessException(ErrorCode.CHAT_ROOM_NOT_FOUND));
+
+        return ChatMapper.toChatRoomResponse(chatRoom, null);
+    }
+
     private List<Member> getParticipants(ChatRoom chatRoom) {
         log.debug("채팅방 참여자 조회 시작 - roomId={}, roomType={}", chatRoom.getId(), chatRoom.getRoomType());
 
-        Set<Member> participants = new HashSet<>();
-
-        if (chatRoom.getRoomType() == ChatRoomType.ONE_ON_ONE_DIRECT) {
-            // 직접 DM: initiator + receiver
-            if (chatRoom.getInitiator() != null) participants.add(chatRoom.getInitiator());
-            if (chatRoom.getReceiver()  != null) participants.add(chatRoom.getReceiver());
-        } else {
-            // 게시글 기반 채팅방: 방장은 항상 포함
-            participants.add(chatRoom.getPost().getAuthor());
-
-            if (chatRoom.getRoomType() == ChatRoomType.ONE_ON_ONE) {
-                // 1:1 채팅: 양도 데이터에서 구매자 확인
-                transferRepository.findByPostId(chatRoom.getPost().getId())
-                        .ifPresent(t -> { if (t.getBuyer() != null) participants.add(t.getBuyer()); });
-            } else {
-                // 그룹 채팅: messages 컬렉션 대신 전용 쿼리로 sender 추출 (N+1 방지)
-                participants.addAll(chatMessageRepository.findDistinctSendersByRoomId(chatRoom.getId()));
+        List<Member> participants;
+        if (chatRoom.getRoomType() == ChatRoomType.ONE_ON_ONE || chatRoom.getRoomType() == ChatRoomType.ONE_ON_ONE_DIRECT) {
+            Set<Member> directParticipants = new LinkedHashSet<>();
+            if (chatRoom.getInitiator() != null) {
+                directParticipants.add(chatRoom.getInitiator());
             }
+            if (chatRoom.getReceiver() != null) {
+                directParticipants.add(chatRoom.getReceiver());
+            }
+            participants = new ArrayList<>(directParticipants);
+        } else {
+            participants = chatRoom.getParticipants().stream()
+                    .map(ChatRoomParticipant::getMember)
+                    .distinct()
+                    .toList();
         }
 
         log.debug("채팅방 참여자 조회 완료 - roomId={}, 참여자 수={}", chatRoom.getId(), participants.size());
-        return new ArrayList<>(participants);
+        return participants;
     }
 
-    // 그룹 채팅방 생성
     @Transactional
-    public Long createChatRoom(Long memberId, Long postId, ChatRoomType chatRoomType) {
+    public Long createGroupChatRoom(Long memberId, Long postId, ChatRoomType chatRoomType) {
         log.info("채팅방 생성 시작 - memberId={}, postId={}, chatRoomType={}", memberId, postId, chatRoomType);
 
-        Post post = postRepository.findByIdWithAuthor(postId)
-                .orElseThrow(() -> new BusinessException(ErrorCode.POST_NOT_FOUND));
-
+        Post post = getPostForGroupChatRoom(postId, chatRoomType);
         if (!post.getAuthor().getId().equals(memberId)) {
             log.warn("채팅방 생성 접근 거부 - memberId={}, postId={}", memberId, postId);
             throw new BusinessException(ErrorCode.ACCESS_DENIED);
@@ -157,9 +155,10 @@ public class ChatRoomService {
         Long roomId = chatRoomRepository.findByPostId(postId)
                 .map(ChatRoom::getId)
                 .orElseGet(() -> {
-                    ChatRoom newRoom = ChatRoomMapper.toEntity(chatRoomType, post, post.getAuthor(), post.getAuthor());
+                    ChatRoom newRoom = ChatRoomMapper.toEntity(chatRoomType, post, null, null);
+                    addGroupChatParticipants(newRoom, post, chatRoomType);
                     Long newRoomId = chatRoomRepository.save(newRoom).getId();
-                    log.info("새 채팅방 생성 완료 - roomId={}", newRoomId);
+                    log.info("새 그룹 채팅방 생성 완료 - roomId={}", newRoomId);
                     return newRoomId;
                 });
 
@@ -167,31 +166,42 @@ public class ChatRoomService {
         return roomId;
     }
 
-    // ── 직접 DM 채팅방 생성 (userId 기반) ──
+    private Post getPostForGroupChatRoom(Long postId, ChatRoomType chatRoomType) {
+        if (chatRoomType == ChatRoomType.GROUP_CREW) {
+            return postRepository.findByIdWithParticipants(postId)
+                    .orElseThrow(() -> new BusinessException(ErrorCode.POST_NOT_FOUND));
+        }
 
-    /**
-     * 발신자(senderId)와 수신자(targetUserId) 간 1:1 DM 방을 반환합니다.
-     * 이미 존재하면 기존 방을 반환하고, 없으면 새로 생성합니다.
-     *
-     * @return 채팅방 ID
-     */
+        return postRepository.findByIdWithAuthor(postId)
+                .orElseThrow(() -> new BusinessException(ErrorCode.POST_NOT_FOUND));
+    }
+
+    private void addGroupChatParticipants(ChatRoom chatRoom, Post post, ChatRoomType chatRoomType) {
+        chatRoom.addParticipant(post.getAuthor());
+
+        if (chatRoomType != ChatRoomType.GROUP_CREW) {
+            return;
+        }
+
+        post.getParticipants().stream()
+                .map(CrewParticipant::getMember)
+                .forEach(chatRoom::addParticipant);
+    }
+
     @Transactional
     public Long createOrFindDirectDm(Long senderId, Long targetUserId) {
-        log.info("직접 DM 방 조회/생성 시작 - senderId={}, targetUserId={}", senderId, targetUserId);
+        log.info("직접 DM 조회/생성 시작 - senderId={}, targetUserId={}", senderId, targetUserId);
 
         if (senderId.equals(targetUserId)) {
             throw new BusinessException(ErrorCode.ACCESS_DENIED);
         }
 
-        // 1. 기존 방 확인 (중복 방지)
-        return chatRoomRepository
-                .findDirectDmBetween(senderId, targetUserId, ChatRoomType.ONE_ON_ONE_DIRECT)
+        return chatRoomRepository.findDirectDmBetween(senderId, targetUserId, ChatRoomType.ONE_ON_ONE_DIRECT)
                 .map(room -> {
-                    log.info("기존 직접 DM 방 반환 - roomId={}", room.getId());
+                    log.info("기존 직접 DM 반환 - roomId={}", room.getId());
                     return room.getId();
                 })
                 .orElseGet(() -> {
-                    // 2. 없으면 두 유저 조회 후 신규 생성
                     Member initiator = memberRepository.findById(senderId)
                             .orElseThrow(() -> new BusinessException(ErrorCode.MEMBER_NOT_FOUND));
                     Member receiver = memberRepository.findById(targetUserId)
@@ -199,7 +209,7 @@ public class ChatRoomService {
 
                     ChatRoom newRoom = ChatRoomMapper.toEntity(ChatRoomType.ONE_ON_ONE_DIRECT, null, initiator, receiver);
                     Long newRoomId = chatRoomRepository.save(newRoom).getId();
-                    log.info("새 직접 DM 방 생성 완료 - roomId={}", newRoomId);
+                    log.info("새 직접 DM 생성 완료 - roomId={}", newRoomId);
                     return newRoomId;
                 });
     }
